--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -18,17 +18,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading individual forecasting models...\n",
-      "Loading ensemble methods and models...\n",
-      "Loading metrics...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from models.forecasting import FC_MODELS\n",
     "from models.ensembling import ENS_METHODS\n",
@@ -36,12 +26,12 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:06.713806Z",
-     "start_time": "2024-03-04T10:08:27.950867Z"
+     "start_time": "2024-03-04T13:05:21.761313Z"
     }
    },
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -54,16 +44,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading helper functions...\n",
-      "Loading paths...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.helpers import csv_reader\n",
     "from utils.paths import *\n",
@@ -71,12 +52,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:06.817612Z",
-     "start_time": "2024-03-04T10:09:06.718819Z"
-    }
+    "is_executing": true
    },
-   "execution_count": 2
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -89,12 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:06.827156Z",
-     "start_time": "2024-03-04T10:09:06.821625Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -108,21 +83,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     bid_close\n",
-      "datetime                      \n",
-      "2020-01-01 00:00:00        NaN\n",
-      "2020-01-01 00:15:00        NaN\n",
-      "2020-01-01 00:30:00        NaN\n",
-      "2020-01-01 00:45:00        NaN\n",
-      "2020-01-01 01:00:00        NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Using the EUR-USD Exchange Rate data\n",
     "df = csv_reader(TESTDATA_DIR, 'eurusd', columns=['datetime', 'bid_close'])\n",
@@ -133,12 +94,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:07.416945Z",
-     "start_time": "2024-03-04T10:09:06.830166Z"
-    }
+    "is_executing": true
    },
-   "execution_count": 4
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -160,12 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:07.432628Z",
-     "start_time": "2024-03-04T10:09:07.424966Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -190,146 +145,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[33;1m=================================================================================\n",
-      "[2024-03-04 11:09] Starting  Pipeline...\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "=====================================================\n",
-      "== Starting Step 1 in Pipeline: Data Preprocessing ==\n",
-      "=====================================================\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mSearching for time information...\u001B[0m\n",
-      "\u001B[33;1mDates found in 'index' column!\u001B[0m\n",
-      "\u001B[33;1mInferred frequency: 15T\u001B[0m\n",
-      "\u001B[33;1mData from goes from 2020-01-01 to 2020-04-14, resulting in 10000 observations.\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mAggregating data to frequency 'business day' using method 'last' and dropping NaNs...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "Data now has 74 observations.\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mSelecting target and covariates...\u001B[0m\n",
-      "\u001B[33;1mTarget: bid_close\u001B[0m\n",
-      "\u001B[33;1mCovariates: None\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Data Insight:\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m            bid_close\n",
-      "datetime             \n",
-      "2020-01-02    1.11702\n",
-      "2020-01-03    1.11599\n",
-      "2020-01-06    1.11948\n",
-      "2020-01-07    1.11530\n",
-      "2020-01-08    1.11124\u001B[0m\n",
-      "\u001B[33;1m[Time elapsed: 00s]\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "=======================================================\n",
-      "== Starting Step 2 in Pipeline: Individual Forecasts ==\n",
-      "=======================================================\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mSplitting data (train/test ratio: 30/70)...\n",
-      "Initial training set has 22 observations \u001B[0m\n",
-      "\u001B[33;1mand goes from 2020-01-02 to 2020-01-31\n",
-      "There are 52 periods to be forecasted: \u001B[0m\n",
-      "\u001B[33;1m2020-02-03 to 2020-04-14\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mNow generating 52 one-step ahead expanding window predictions from model: Naive (sktime)\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mSince no covariates are given, skipping covariate models \u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Individual predictions finished!\n",
-      "\n",
-      "Insights into models' predictions:\u001B[0m\n",
-      "\u001B[33;1m              Naive\n",
-      "Date               \n",
-      "2020-02-03  1.10885\n",
-      "2020-02-04  1.10618\n",
-      "2020-02-05  1.10440\n",
-      "2020-02-06  1.09994\n",
-      "2020-02-07  1.09802\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mExporting individual predictions as csv...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m[Time elapsed: 03s]\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "=============================================\n",
-      "== Step 3: Historical Ensemble Predictions ==\n",
-      "=============================================\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mSplitting forecast data (n = 52) for ensemble forecasts (train/test ratio: 30/70)...\u001B[0m\n",
-      "\u001B[33;1mInitial training set has 15 observations and goes from 2020-02-03 to 2020-02-21\u001B[0m\n",
-      "\u001B[33;1mThere are 37 periods to be forecasted by the individual models 2020-02-24 to 2020-04-14\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Now generating 37 one-step ahead expanding window predictions from ensemble model: 'Weighted - Simple'\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 1 / 37\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 20 / 37\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 37 / 37\u001B[0m\n",
-      "\u001B[33;1m...finished!\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Now generating 37 one-step ahead expanding window predictions from ensemble model: 'Weighted - Inverse RMSE'\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 1 / 37\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 20 / 37\u001B[0m\n",
-      "\u001B[33;1mEnsemble forecast 37 / 37\u001B[0m\n",
-      "\u001B[33;1m...finished!\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Ensemble predictions finished!\n",
-      "\n",
-      "Insights into ensembles' predictions:\u001B[0m\n",
-      "\u001B[33;1m            Weighted Ensemble: Simple  Weighted Ensemble: Inverse RMSE\n",
-      "Date                                                                  \n",
-      "2020-02-24                    1.08379                          1.08379\n",
-      "2020-02-25                    1.08481                          1.08481\n",
-      "2020-02-26                    1.08792                          1.08792\n",
-      "2020-02-27                    1.08857                          1.08857\n",
-      "2020-02-28                    1.09958                          1.09958\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "Merging...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mExporting ensemble predictions as csv...\u001B[0m\n",
-      "\u001B[33;1mExporting full predictions as csv...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m[Time elapsed: 03s]\n",
-      "\u001B[0m\n",
-      "\u001B[33;1m\n",
-      "============================================\n",
-      "== Step 4: Creating Metrics Ranking Table ==\n",
-      "============================================\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mCalculating MAPE, RMSE, SMAPE per model...\u001B[0m\n",
-      "\u001B[33;1mRanking models ...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mExporting metrics ranking as csv...\u001B[0m\n",
-      "\u001B[33;1m...finished!\n",
-      "\u001B[0m\n",
-      "\u001B[33;1mResults:\u001B[0m\n",
-      "\u001B[33;1m                             Model      MAPE      RMSE     SMAPE  \\\n",
-      "0        Weighted Ensemble: Simple  0.604318  0.008753  0.402667   \n",
-      "1  Weighted Ensemble: Inverse RMSE  0.604318  0.008753  0.402667   \n",
-      "2                            Naive  0.604318  0.008753  0.402667   \n",
-      "\n",
-      "   MAPE Ranking  RMSE Ranking  SMAPE Ranking  \n",
-      "0             2             2              2  \n",
-      "1             2             2              2  \n",
-      "2             2             2              2  \u001B[0m\n",
-      "\u001B[33;1m\n",
-      "\n",
-      "[2024-03-04 11:09] Finished Pipeline!\n",
-      "[Total time elapsed: 03s]\n",
-      "=================================================================================\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_dict = (\n",
     "    run_pipeline(\n",
@@ -345,12 +161,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:10.951181Z",
-     "start_time": "2024-03-04T10:09:07.436644Z"
-    }
+    "is_executing": true
    },
-   "execution_count": 6
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -363,23 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-04T10:09:11.218330Z",
-     "start_time": "2024-03-04T10:09:10.954196Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<pandas.io.formats.style.Styler at 0x1580fc6ef90>",
-      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_6317e\">\n  <thead>\n    <tr>\n      <th id=\"T_6317e_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n      <th id=\"T_6317e_level0_col1\" class=\"col_heading level0 col1\" >MAPE</th>\n      <th id=\"T_6317e_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n      <th id=\"T_6317e_level0_col3\" class=\"col_heading level0 col3\" >SMAPE</th>\n      <th id=\"T_6317e_level0_col4\" class=\"col_heading level0 col4\" >MAPE Ranking</th>\n      <th id=\"T_6317e_level0_col5\" class=\"col_heading level0 col5\" >RMSE Ranking</th>\n      <th id=\"T_6317e_level0_col6\" class=\"col_heading level0 col6\" >SMAPE Ranking</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_6317e_row0_col0\" class=\"data row0 col0\" >Weighted Ensemble: Simple</td>\n      <td id=\"T_6317e_row0_col1\" class=\"data row0 col1\" >0.604318</td>\n      <td id=\"T_6317e_row0_col2\" class=\"data row0 col2\" >0.008753</td>\n      <td id=\"T_6317e_row0_col3\" class=\"data row0 col3\" >0.402667</td>\n      <td id=\"T_6317e_row0_col4\" class=\"data row0 col4\" >2</td>\n      <td id=\"T_6317e_row0_col5\" class=\"data row0 col5\" >2</td>\n      <td id=\"T_6317e_row0_col6\" class=\"data row0 col6\" >2</td>\n    </tr>\n    <tr>\n      <td id=\"T_6317e_row1_col0\" class=\"data row1 col0\" >Weighted Ensemble: Inverse RMSE</td>\n      <td id=\"T_6317e_row1_col1\" class=\"data row1 col1\" >0.604318</td>\n      <td id=\"T_6317e_row1_col2\" class=\"data row1 col2\" >0.008753</td>\n      <td id=\"T_6317e_row1_col3\" class=\"data row1 col3\" >0.402667</td>\n      <td id=\"T_6317e_row1_col4\" class=\"data row1 col4\" >2</td>\n      <td id=\"T_6317e_row1_col5\" class=\"data row1 col5\" >2</td>\n      <td id=\"T_6317e_row1_col6\" class=\"data row1 col6\" >2</td>\n    </tr>\n    <tr>\n      <td id=\"T_6317e_row2_col0\" class=\"data row2 col0\" >Naive</td>\n      <td id=\"T_6317e_row2_col1\" class=\"data row2 col1\" >0.604318</td>\n      <td id=\"T_6317e_row2_col2\" class=\"data row2 col2\" >0.008753</td>\n      <td id=\"T_6317e_row2_col3\" class=\"data row2 col3\" >0.402667</td>\n      <td id=\"T_6317e_row2_col4\" class=\"data row2 col4\" >2</td>\n      <td id=\"T_6317e_row2_col5\" class=\"data row2 col5\" >2</td>\n      <td id=\"T_6317e_row2_col6\" class=\"data row2 col6\" >2</td>\n    </tr>\n  </tbody>\n</table>\n"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(output_dict['metrics ranking'].style.hide())"
    ]
